crates/slate/tests/snapshots/do_while.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn sum_do_while(arg1: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    let mut i: i32 = 0;
    n = arg1;
    let _v0: i32 = 0;
    total = _v0;
    let _v1: i32 = 1;
    i = _v1;
    {
        loop {
            {
                let _v2: i32 = i;
                let _v3: i32 = total;
                let _v4: i32 = _v3 + _v2;
                total = _v4;
                let _v5: i32 = i;
                let _v6: i32 = _v5 + 1;
                i = _v6;
            }
            let _v7: i32 = i;
            let _v8: i32 = n;
            let _v9: bool = _v7 <= _v8;
            if !_v9 {
                break;
            }
        }
    }
    let _v10: i32 = total;
    __retval = _v10;
    let _v11: i32 = __retval;
    return _v11;
}

fn runs_once_when_false() -> i32 {
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    let _v0: i32 = 0;
    total = _v0;
    {
        loop {
            {
                let _v1: i32 = 7;
                let _v2: i32 = total;
                let _v3: i32 = _v2 + _v1;
                total = _v3;
            }
            let _v4: i32 = 0;
            let _v5: bool = _v4 != 0;
            if !_v5 {
                break;
            }
        }
    }
    let _v6: i32 = total;
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

fn continue_checks_condition(arg0: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    let mut i: i32 = 0;
    n = arg0;
    let _v0: i32 = 0;
    total = _v0;
    let _v1: i32 = 0;
    i = _v1;
    {
        '__loop0: loop {
            '__continue0: {
                {
                    let _v2: i32 = i;
                    let _v3: i32 = _v2 + 1;
                    i = _v3;
                    {
                        let _v4: i32 = i;
                        let _v5: i32 = 2;
                        let _v6: i32 = _v4 % _v5;
                        let _v7: i32 = 0;
                        let _v8: bool = _v6 == _v7;
                        if _v8 {
                            break '__continue0;
                        }
                    }
                    let _v9: i32 = i;
                    let _v10: i32 = total;
                    let _v11: i32 = _v10 + _v9;
                    total = _v11;
                }
            }
            let _v12: i32 = i;
            let _v13: i32 = n;
            let _v14: bool = _v12 < _v13;
            if !_v14 {
                break '__loop0;
            }
        }
    }
    let _v15: i32 = total;
    __retval = _v15;
    let _v16: i32 = __retval;
    return _v16;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 5;
    let _v3: i32 = sum_do_while(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = 0;
    let _v7: i32 = sum_do_while(_v6);
    let _v8: i32 = unsafe { printf(_v5 as *const i8, _v7) };
    let _v9: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v10: i32 = runs_once_when_false();
    let _v11: i32 = unsafe { printf(_v9 as *const i8, _v10) };
    let _v12: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v13: i32 = 6;
    let _v14: i32 = continue_checks_condition(_v13);
    let _v15: i32 = unsafe { printf(_v12 as *const i8, _v14) };
    let _v16: i32 = 0;
    __retval = _v16;
    let _v17: i32 = __retval;
    std::process::exit(_v17 as i32);
}
