crates/slate/tests/snapshots/elifdef.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut elifdef_value: i32 = 0;
    let mut elifndef_value: i32 = 0;
    let mut inactive_value: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 0;
    elifdef_value = _v1;
    let _v2: i32 = 0;
    elifndef_value = _v2;
    let _v3: i32 = 0;
    inactive_value = _v3;
    let _v4: i32 = 23;
    elifdef_value = _v4;
    let _v5: i32 = 29;
    elifndef_value = _v5;
    let _v6: i32 = 31;
    inactive_value = _v6;
    let _v7: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v8: i32 = elifdef_value;
    let _v9: i32 = elifndef_value;
    let _v10: i32 = inactive_value;
    let _v11: i32 = unsafe { printf(_v7 as *const i8, _v8, _v9, _v10) };
    let _v12: i32 = 0;
    __retval = _v12;
    let _v13: i32 = __retval;
    std::process::exit(_v13 as i32);
}
