crates/slate/tests/snapshots/enum_wrapper_unwind_abi_propagation.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum Status {
    STATUS_OK = 0,
    STATUS_FAIL = 1,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct Dispatcher {
    run: Option<unsafe extern "C" fn(i32) -> u32>,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct __slate_jmp_buf_tag {
    __regs: [i64; 8],
    __mask_was_saved: i32,
    __saved_mask: [u64; 16],
}


static mut env: aligned::Aligned<aligned::A16, [__slate_jmp_buf_tag; 1]> = aligned::Aligned([__slate_jmp_buf_tag { __regs: [0; 8], __mask_was_saved: 0, __saved_mask: [0; 16] }; 1]);

static mut failures: i32 = 0;

static mut g_callback: Option<unsafe extern "C" fn(i32)> = None;

unsafe extern "C" {
    fn longjmp(_0: *mut __slate_jmp_buf_tag, _1: i32) -> !;
    fn setjmp(_0: *mut __slate_jmp_buf_tag) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn panicky_callback(arg2: i32) {
    let mut x: i32 = 0;
    x = arg2;
    {
        let _v0: i32 = x;
        let _v1: i32 = 2;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let _v3: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
            let _v4: i32 = 1;
            unsafe { longjmp(_v3 as *mut __slate_jmp_buf_tag, _v4 as i32) };
        }
    }
    let _v5: *mut i8 = b"callback %d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = x;
    let _v7: i32 = unsafe { printf(_v5 as *const i8, _v6) };
    return;
}

extern "C" fn risky(arg1: i32) -> u32 {
    let mut x: i32 = 0;
    let mut __retval: u32 = 0;
    x = arg1;
    {
        let _v0: i32 = x;
        let _v1: i32 = 3;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let _v3: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
            let _v4: i32 = 1;
            unsafe { longjmp(_v3 as *mut __slate_jmp_buf_tag, _v4 as i32) };
        }
    }
    let _v5: u32 = Status::STATUS_OK as u32;
    __retval = _v5;
    let _v6: u32 = __retval;
    return _v6;
}

extern "C" fn content_like(arg0: i32) -> u32 {
    let mut x: i32 = 0;
    let mut __retval: u32 = 0;
    x = arg0;
    let _v0: Option<unsafe extern "C" fn(i32)> = unsafe { g_callback };
    let _v1: i32 = x;
    unsafe { _v0.unwrap()(_v1) };
    let _v2: u32 = Status::STATUS_OK as u32;
    __retval = _v2;
    let _v3: u32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut d: Dispatcher = Dispatcher { run: None };
    let _v0: i32 = 0;
    __retval = _v0;
    unsafe {
        g_callback = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32)>>(panicky_callback as *const ()) };
    }
    d.run = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> u32>>(risky as *const ()) };
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        '__loop0: loop {
            let _v2: i32 = i;
            let _v3: i32 = 5;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            '__continue0: {
                {
                    {
                        let _v5: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
                        let _v6: i32 = unsafe { setjmp(_v5 as *mut __slate_jmp_buf_tag) };
                        let _v7: bool = _v6 != 0;
                        if _v7 {
                            let _v8: i32 = unsafe { failures };
                            let _v9: i32 = _v8 + 1;
                            unsafe {
                                failures = _v9;
                            }
                            let _v10: *mut i8 = b"recovered risky %d\n\0".as_ptr() as *mut i8;
                            let _v11: i32 = i;
                            let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
                            break '__continue0;
                        }
                    }
                    let _v13: Option<unsafe extern "C" fn(i32) -> u32> = d.run;
                    let _v14: i32 = i;
                    let _v15: u32 = unsafe { _v13.unwrap()(_v14) };
                }
            }
            let _v16: i32 = i;
            let _v17: i32 = _v16 + 1;
            i = _v17;
        }
    }
    d.run = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32) -> u32>>(content_like as *const ()) };
    {
        let mut i2: i32 = 0;
        let _v18: i32 = 0;
        i2 = _v18;
        '__loop1: loop {
            let _v19: i32 = i2;
            let _v20: i32 = 5;
            let _v21: bool = _v19 < _v20;
            if !_v21 {
                break;
            }
            '__continue1: {
                {
                    {
                        let _v22: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
                        let _v23: i32 = unsafe { setjmp(_v22 as *mut __slate_jmp_buf_tag) };
                        let _v24: bool = _v23 != 0;
                        if _v24 {
                            let _v25: i32 = unsafe { failures };
                            let _v26: i32 = _v25 + 1;
                            unsafe {
                                failures = _v26;
                            }
                            let _v27: *mut i8 = b"recovered content_like %d\n\0".as_ptr() as *mut i8;
                            let _v28: i32 = i2;
                            let _v29: i32 = unsafe { printf(_v27 as *const i8, _v28) };
                            break '__continue1;
                        }
                    }
                    let _v30: Option<unsafe extern "C" fn(i32) -> u32> = d.run;
                    let _v31: i32 = i2;
                    let _v32: u32 = unsafe { _v30.unwrap()(_v31) };
                }
            }
            let _v33: i32 = i2;
            let _v34: i32 = _v33 + 1;
            i2 = _v34;
        }
    }
    let _v35: *mut i8 = b"failures=%d\n\0".as_ptr() as *mut i8;
    let _v36: i32 = unsafe { failures };
    let _v37: i32 = unsafe { printf(_v35 as *const i8, _v36) };
    let _v38: i32 = 0;
    __retval = _v38;
    let _v39: i32 = __retval;
    std::process::exit(_v39 as i32);
}
