crates/slate/tests/snapshots/enums.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum Basic {
    BasicZero = 0,
    BasicOne = 1,
    BasicFive = 5,
    BasicSix = 6,
    BasicNegative = -2,
    BasicNegativeNext = -1,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = Basic::BasicZero as i32;
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v5: i32 = Basic::BasicOne as i32;
    let _v6: i32 = unsafe { printf(_v4 as *const i8, _v5) };
    let _v7: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v8: i32 = Basic::BasicFive as i32;
    let _v9: i32 = unsafe { printf(_v7 as *const i8, _v8) };
    let _v10: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v11: i32 = Basic::BasicSix as i32;
    let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
    let _v13: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v14: i32 = Basic::BasicNegative as i32;
    let _v15: i32 = unsafe { printf(_v13 as *const i8, _v14) };
    let _v16: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v17: i32 = Basic::BasicNegativeNext as i32;
    let _v18: i32 = unsafe { printf(_v16 as *const i8, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}
