crates/slate/tests/snapshots/extern_decl.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn toupper(_0: i32) -> i32;
    fn tolower(_0: i32) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%c%c %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 97;
    let _v3: i32 = unsafe { toupper(_v2 as i32) };
    let _v4: i32 = 90;
    let _v5: i32 = unsafe { tolower(_v4 as i32) };
    let _v6: i32 = -42;
    let _v7: i32 = _v6.wrapping_abs();
    let _v8: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
