crates/slate/tests/snapshots/flexible_array_member.snap
---
source: tests/snapshot.rs
expression: rust
---
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct FlexibleArray {
    count: u64,
    values: [i32; 0],
}


unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn free(_0: *mut core::ffi::c_void);
}

fn main() {
    let mut __retval: i32 = 0;
    let mut flexible: *mut FlexibleArray = std::ptr::null_mut();
    let mut total: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let _v1: u64 = std::mem::size_of::<FlexibleArray>() as u64;
        let _v2: u64 = 8;
        let _v3: bool = _v1 != _v2;
        if _v3 {
            let _v4: i32 = 1;
            __retval = _v4;
            let _v5: i32 = __retval;
            std::process::exit(_v5 as i32);
        }
    }
    let _v6: u64 = 8;
    let _v7: u64 = 3;
    let _v8: u64 = 4;
    let _v9: u64 = _v7 * _v8;
    let _v10: u64 = _v6 + _v9;
    let _v11: *mut core::ffi::c_void = unsafe { malloc(_v10 as usize) };
    let _v12: *mut FlexibleArray = _v11 as *mut FlexibleArray;
    flexible = _v12;
    {
        let _v13: *mut FlexibleArray = flexible;
        let _v14: *mut FlexibleArray = std::ptr::null_mut();
        let _v15: bool = _v13 == _v14;
        if _v15 {
            let _v16: i32 = 2;
            __retval = _v16;
            let _v17: i32 = __retval;
            std::process::exit(_v17 as i32);
        }
    }
    let _v18: u64 = 3;
    let _v19: *mut FlexibleArray = flexible;
    unsafe {
        (*_v19).count = _v18;
    }
    {
        let mut index: u64 = 0;
        let _v20: u64 = 0;
        index = _v20;
        loop {
            let _v21: u64 = index;
            let _v22: *mut FlexibleArray = flexible;
            let _v23: u64 = unsafe { (*_v22).count };
            let _v24: bool = _v21 < _v23;
            if !_v24 {
                break;
            }
            {
                let _v25: u64 = index;
                let _v26: i32 = _v25 as i32;
                let _v27: i32 = 1;
                let _v28: i32 = _v26 + _v27;
                let _v29: u64 = index;
                let _v30: *mut FlexibleArray = flexible;
                unsafe {
                    *(*_v30).values.as_mut_ptr().add(_v29 as usize) = _v28;
                }
            }
            let _v31: u64 = index;
            let _v32: u64 = _v31 + 1;
            index = _v32;
        }
    }
    let _v33: i32 = 0;
    total = _v33;
    {
        let mut index2: u64 = 0;
        let _v34: u64 = 0;
        index2 = _v34;
        loop {
            let _v35: u64 = index2;
            let _v36: *mut FlexibleArray = flexible;
            let _v37: u64 = unsafe { (*_v36).count };
            let _v38: bool = _v35 < _v37;
            if !_v38 {
                break;
            }
            {
                let _v39: u64 = index2;
                let _v40: *mut FlexibleArray = flexible;
                let _v41: i32 = unsafe { *(*_v40).values.as_mut_ptr().add(_v39 as usize) };
                let _v42: i32 = total;
                let _v43: i32 = _v42 + _v41;
                total = _v43;
            }
            let _v44: u64 = index2;
            let _v45: u64 = _v44 + 1;
            index2 = _v45;
        }
    }
    let _v46: *mut FlexibleArray = flexible;
    let _v47: *mut core::ffi::c_void = _v46 as *mut core::ffi::c_void;
    unsafe { free(_v47 as *mut core::ffi::c_void) };
    let _v48: i32 = total;
    let _v49: i32 = 6;
    let _v50: bool = _v48 == _v49;
    let _v51: i32 = 0;
    let _v52: i32 = 3;
    let _v53: i32 = if _v50 { _v51 } else { _v52 };
    __retval = _v53;
    let _v54: i32 = __retval;
    std::process::exit(_v54 as i32);
}
