crates/slate/tests/snapshots/fprintf_stdout_with_args.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    static mut stdout: *mut libc::FILE;
    fn fprintf(_0: *mut libc::FILE, _1: *const i8, ...) -> i32;
    fn fputs(_0: *const i8, _1: *mut libc::FILE) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut libc::FILE = unsafe { stdout };
    let _v2: *mut i8 = b"value: %d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = 7;
    let _v4: i32 = unsafe { fprintf(_v1 as *mut libc::FILE, _v2 as *const i8, _v3) };
    let _v5: *mut i8 = b"done\n\0".as_ptr() as *mut i8;
    let _v6: *mut libc::FILE = unsafe { stdout };
    let _v7: i32 = unsafe { fputs(_v5 as *const i8, _v6 as *mut libc::FILE) };
    let _v8: i32 = 0;
    __retval = _v8;
    let _v9: i32 = __retval;
    std::process::exit(_v9 as i32);
}
